# Logitech-Marble-Labwc

./: .gitignore  README.md  build_deb.sh  install.py  logitech-marble-labwc_1.0_all.deb  pyproject.toml  test_.py
.github/workflows/: python-package.yml
logitech-marble-labwc_1.0_all/DEBIAN/: control
